update footer and add our apps section to home page

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -5,16 +5,11 @@
 
 # footer menu
 [[footer]]
-name = "About"
-pageRef = "/about"
+name = "LevelupHN"
+url = "/leveluphn"
 weight = 1
 
 [[footer]]
 name = "Contact Us"
 url = "mailto:asd@example.com"
 weight = 2
-
-[[footer]]
-name = "Privacy Policy"
-url = "/privacy-policy"
-weight = 3
