--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "https://sudofishlabs.github.io/"
+baseURL = "https://sudofish.com/"
 # Title of your website (required).
 title = "LevelUp"
 # Your theme name
